tests/baselines/reference/typedArrays.errors.txt
typedArrays.ts(3,5): error TS2322: Type 'Int8ArrayConstructor' is not assignable to type 'never'.
typedArrays.ts(4,5): error TS2322: Type 'Uint8ArrayConstructor' is not assignable to type 'never'.
typedArrays.ts(5,5): error TS2322: Type 'Int16ArrayConstructor' is not assignable to type 'never'.
typedArrays.ts(6,5): error TS2322: Type 'Uint16ArrayConstructor' is not assignable to type 'never'.
typedArrays.ts(7,5): error TS2322: Type 'Int32ArrayConstructor' is not assignable to type 'never'.
typedArrays.ts(8,5): error TS2322: Type 'Uint32ArrayConstructor' is not assignable to type 'never'.
typedArrays.ts(9,5): error TS2322: Type 'Float32ArrayConstructor' is not assignable to type 'never'.
typedArrays.ts(10,5): error TS2322: Type 'Float64ArrayConstructor' is not assignable to type 'never'.
typedArrays.ts(11,5): error TS2322: Type 'Uint8ClampedArrayConstructor' is not assignable to type 'never'.
typedArrays.ts(18,5): error TS2322: Type 'Int8Array' is not assignable to type 'never'.
typedArrays.ts(19,5): error TS2322: Type 'Uint8Array' is not assignable to type 'never'.
typedArrays.ts(20,5): error TS2322: Type 'Int16Array' is not assignable to type 'never'.
typedArrays.ts(21,5): error TS2322: Type 'Uint16Array' is not assignable to type 'never'.
typedArrays.ts(22,5): error TS2322: Type 'Int32Array' is not assignable to type 'never'.
typedArrays.ts(23,5): error TS2322: Type 'Uint32Array' is not assignable to type 'never'.
typedArrays.ts(24,5): error TS2322: Type 'Float32Array' is not assignable to type 'never'.
typedArrays.ts(25,5): error TS2322: Type 'Float64Array' is not assignable to type 'never'.
typedArrays.ts(26,5): error TS2322: Type 'Uint8ClampedArray' is not assignable to type 'never'.
typedArrays.ts(33,5): error TS2322: Type 'Int8Array' is not assignable to type 'never'.
typedArrays.ts(34,5): error TS2322: Type 'Uint8Array' is not assignable to type 'never'.
typedArrays.ts(35,5): error TS2322: Type 'Int16Array' is not assignable to type 'never'.
typedArrays.ts(36,5): error TS2322: Type 'Uint16Array' is not assignable to type 'never'.
typedArrays.ts(37,5): error TS2322: Type 'Int32Array' is not assignable to type 'never'.
typedArrays.ts(38,5): error TS2322: Type 'Uint32Array' is not assignable to type 'never'.
typedArrays.ts(39,5): error TS2322: Type 'Float32Array' is not assignable to type 'never'.
typedArrays.ts(40,5): error TS2322: Type 'Float64Array' is not assignable to type 'never'.
typedArrays.ts(41,5): error TS2322: Type 'Uint8ClampedArray' is not assignable to type 'never'.
typedArrays.ts(48,5): error TS2322: Type 'Int8Array' is not assignable to type 'never'.
typedArrays.ts(49,5): error TS2322: Type 'Uint8Array' is not assignable to type 'never'.
typedArrays.ts(50,5): error TS2322: Type 'Int16Array' is not assignable to type 'never'.
typedArrays.ts(51,5): error TS2322: Type 'Uint16Array' is not assignable to type 'never'.
typedArrays.ts(52,5): error TS2322: Type 'Int32Array' is not assignable to type 'never'.
typedArrays.ts(53,5): error TS2322: Type 'Uint32Array' is not assignable to type 'never'.
typedArrays.ts(54,5): error TS2322: Type 'Float32Array' is not assignable to type 'never'.
typedArrays.ts(55,5): error TS2322: Type 'Float64Array' is not assignable to type 'never'.
typedArrays.ts(56,5): error TS2322: Type 'Uint8ClampedArray' is not assignable to type 'never'.
typedArrays.ts(63,5): error TS2322: Type 'Int8Array' is not assignable to type 'never'.
typedArrays.ts(64,5): error TS2322: Type 'Uint8Array' is not assignable to type 'never'.
typedArrays.ts(65,5): error TS2322: Type 'Int16Array' is not assignable to type 'never'.
typedArrays.ts(66,5): error TS2322: Type 'Uint16Array' is not assignable to type 'never'.
typedArrays.ts(67,5): error TS2322: Type 'Int32Array' is not assignable to type 'never'.
typedArrays.ts(68,5): error TS2322: Type 'Uint32Array' is not assignable to type 'never'.
typedArrays.ts(69,5): error TS2322: Type 'Float32Array' is not assignable to type 'never'.
typedArrays.ts(70,5): error TS2322: Type 'Float64Array' is not assignable to type 'never'.
typedArrays.ts(71,5): error TS2322: Type 'Uint8ClampedArray' is not assignable to type 'never'.
typedArrays.ts(78,5): error TS2322: Type 'Int8Array' is not assignable to type 'never'.
typedArrays.ts(79,5): error TS2322: Type 'Uint8Array' is not assignable to type 'never'.
typedArrays.ts(80,5): error TS2322: Type 'Int16Array' is not assignable to type 'never'.
typedArrays.ts(81,5): error TS2322: Type 'Uint16Array' is not assignable to type 'never'.
typedArrays.ts(82,5): error TS2322: Type 'Int32Array' is not assignable to type 'never'.
typedArrays.ts(83,5): error TS2322: Type 'Uint32Array' is not assignable to type 'never'.
typedArrays.ts(84,5): error TS2322: Type 'Float32Array' is not assignable to type 'never'.
typedArrays.ts(85,5): error TS2322: Type 'Float64Array' is not assignable to type 'never'.
typedArrays.ts(86,5): error TS2322: Type 'Uint8ClampedArray' is not assignable to type 'never'.
typedArrays.ts(93,5): error TS2322: Type 'Int8Array' is not assignable to type 'never'.
typedArrays.ts(94,5): error TS2322: Type 'Uint8Array' is not assignable to type 'never'.
typedArrays.ts(95,5): error TS2322: Type 'Int16Array' is not assignable to type 'never'.
typedArrays.ts(96,5): error TS2322: Type 'Uint16Array' is not assignable to type 'never'.
typedArrays.ts(97,5): error TS2322: Type 'Int32Array' is not assignable to type 'never'.
typedArrays.ts(98,5): error TS2322: Type 'Uint32Array' is not assignable to type 'never'.
typedArrays.ts(99,5): error TS2322: Type 'Float32Array' is not assignable to type 'never'.
typedArrays.ts(100,5): error TS2322: Type 'Float64Array' is not assignable to type 'never'.
typedArrays.ts(101,5): error TS2322: Type 'Uint8ClampedArray' is not assignable to type 'never'.
typedArrays.ts(108,5): error TS2322: Type 'Int8Array' is not assignable to type 'never'.
typedArrays.ts(109,5): error TS2322: Type 'Uint8Array' is not assignable to type 'never'.
typedArrays.ts(110,5): error TS2322: Type 'Int16Array' is not assignable to type 'never'.
typedArrays.ts(111,5): error TS2322: Type 'Uint16Array' is not assignable to type 'never'.
typedArrays.ts(112,5): error TS2322: Type 'Int32Array' is not assignable to type 'never'.
typedArrays.ts(113,5): error TS2322: Type 'Uint32Array' is not assignable to type 'never'.
typedArrays.ts(114,5): error TS2322: Type 'Float32Array' is not assignable to type 'never'.
typedArrays.ts(115,5): error TS2322: Type 'Float64Array' is not assignable to type 'never'.
typedArrays.ts(116,5): error TS2322: Type 'Uint8ClampedArray' is not assignable to type 'never'.
typedArrays.ts(123,5): error TS2322: Type 'Int8Array' is not assignable to type 'never'.
typedArrays.ts(124,5): error TS2322: Type 'Uint8Array' is not assignable to type 'never'.
typedArrays.ts(125,5): error TS2322: Type 'Int16Array' is not assignable to type 'never'.
typedArrays.ts(126,5): error TS2322: Type 'Uint16Array' is not assignable to type 'never'.
typedArrays.ts(127,5): error TS2322: Type 'Int32Array' is not assignable to type 'never'.
typedArrays.ts(128,5): error TS2322: Type 'Uint32Array' is not assignable to type 'never'.
typedArrays.ts(129,5): error TS2322: Type 'Float32Array' is not assignable to type 'never'.
typedArrays.ts(130,5): error TS2322: Type 'Float64Array' is not assignable to type 'never'.
typedArrays.ts(131,5): error TS2322: Type 'Uint8ClampedArray' is not assignable to type 'never'.
typedArrays.ts(138,5): error TS2322: Type 'Int8Array' is not assignable to type 'never'.
typedArrays.ts(139,5): error TS2322: Type 'Uint8Array' is not assignable to type 'never'.
typedArrays.ts(140,5): error TS2322: Type 'Int16Array' is not assignable to type 'never'.
typedArrays.ts(141,5): error TS2322: Type 'Uint16Array' is not assignable to type 'never'.
typedArrays.ts(142,5): error TS2322: Type 'Int32Array' is not assignable to type 'never'.
typedArrays.ts(143,5): error TS2322: Type 'Uint32Array' is not assignable to type 'never'.
typedArrays.ts(144,5): error TS2322: Type 'Float32Array' is not assignable to type 'never'.
typedArrays.ts(145,5): error TS2322: Type 'Float64Array' is not assignable to type 'never'.
typedArrays.ts(146,5): error TS2322: Type 'Uint8ClampedArray' is not assignable to type 'never'.
typedArrays.ts(153,5): error TS2322: Type 'Int8Array' is not assignable to type 'never'.
typedArrays.ts(154,5): error TS2322: Type 'Uint8Array' is not assignable to type 'never'.
typedArrays.ts(155,5): error TS2322: Type 'Int16Array' is not assignable to type 'never'.
typedArrays.ts(156,5): error TS2322: Type 'Uint16Array' is not assignable to type 'never'.
typedArrays.ts(157,5): error TS2322: Type 'Int32Array' is not assignable to type 'never'.
typedArrays.ts(158,5): error TS2322: Type 'Uint32Array' is not assignable to type 'never'.
typedArrays.ts(159,5): error TS2322: Type 'Float32Array' is not assignable to type 'never'.
typedArrays.ts(160,5): error TS2322: Type 'Float64Array' is not assignable to type 'never'.
typedArrays.ts(161,5): error TS2322: Type 'Uint8ClampedArray' is not assignable to type 'never'.


==== typedArrays.ts (99 errors) ====
    function CreateTypedArrayTypes() {
        var typedArrays = [];
        typedArrays[0] = Int8Array;
        ~~~~~~~~~~~~~~
!!! error TS2322: Type 'Int8ArrayConstructor' is not assignable to type 'never'.
        typedArrays[1] = Uint8Array;
        ~~~~~~~~~~~~~~
!!! error TS2322: Type 'Uint8ArrayConstructor' is not assignable to type 'never'.
        typedArrays[2] = Int16Array;
        ~~~~~~~~~~~~~~
!!! error TS2322: Type 'Int16ArrayConstructor' is not assignable to type 'never'.
        typedArrays[3] = Uint16Array;
        ~~~~~~~~~~~~~~
!!! error TS2322: Type 'Uint16ArrayConstructor' is not assignable to type 'never'.
        typedArrays[4] = Int32Array;
        ~~~~~~~~~~~~~~
!!! error TS2322: Type 'Int32ArrayConstructor' is not assignable to type 'never'.
        typedArrays[5] = Uint32Array;
        ~~~~~~~~~~~~~~
!!! error TS2322: Type 'Uint32ArrayConstructor' is not assignable to type 'never'.
        typedArrays[6] = Float32Array;
        ~~~~~~~~~~~~~~
!!! error TS2322: Type 'Float32ArrayConstructor' is not assignable to type 'never'.
        typedArrays[7] = Float64Array;
        ~~~~~~~~~~~~~~
!!! error TS2322: Type 'Float64ArrayConstructor' is not assignable to type 'never'.
        typedArrays[8] = Uint8ClampedArray;
        ~~~~~~~~~~~~~~
!!! error TS2322: Type 'Uint8ClampedArrayConstructor' is not assignable to type 'never'.
    
        return typedArrays;
    }
    
    function CreateTypedArrayInstancesFromLength(obj: number) {
        var typedArrays = [];
        typedArrays[0] = new Int8Array(obj);
        ~~~~~~~~~~~~~~
!!! error TS2322: Type 'Int8Array' is not assignable to type 'never'.
        typedArrays[1] = new Uint8Array(obj);
        ~~~~~~~~~~~~~~
!!! error TS2322: Type 'Uint8Array' is not assignable to type 'never'.
        typedArrays[2] = new Int16Array(obj);
        ~~~~~~~~~~~~~~
!!! error TS2322: Type 'Int16Array' is not assignable to type 'never'.
        typedArrays[3] = new Uint16Array(obj);
        ~~~~~~~~~~~~~~
!!! error TS2322: Type 'Uint16Array' is not assignable to type 'never'.
        typedArrays[4] = new Int32Array(obj);
        ~~~~~~~~~~~~~~
!!! error TS2322: Type 'Int32Array' is not assignable to type 'never'.
        typedArrays[5] = new Uint32Array(obj);
        ~~~~~~~~~~~~~~
!!! error TS2322: Type 'Uint32Array' is not assignable to type 'never'.
        typedArrays[6] = new Float32Array(obj);
        ~~~~~~~~~~~~~~
!!! error TS2322: Type 'Float32Array' is not assignable to type 'never'.
        typedArrays[7] = new Float64Array(obj);
        ~~~~~~~~~~~~~~
!!! error TS2322: Type 'Float64Array' is not assignable to type 'never'.
        typedArrays[8] = new Uint8ClampedArray(obj);
        ~~~~~~~~~~~~~~
!!! error TS2322: Type 'Uint8ClampedArray' is not assignable to type 'never'.
    
        return typedArrays;
    }
    
    function CreateTypedArrayInstancesFromArray(obj: number[]) {
        var typedArrays = [];
        typedArrays[0] = new Int8Array(obj);
        ~~~~~~~~~~~~~~
!!! error TS2322: Type 'Int8Array' is not assignable to type 'never'.
        typedArrays[1] = new Uint8Array(obj);
        ~~~~~~~~~~~~~~
!!! error TS2322: Type 'Uint8Array' is not assignable to type 'never'.
        typedArrays[2] = new Int16Array(obj);
        ~~~~~~~~~~~~~~
!!! error TS2322: Type 'Int16Array' is not assignable to type 'never'.
        typedArrays[3] = new Uint16Array(obj);
        ~~~~~~~~~~~~~~
!!! error TS2322: Type 'Uint16Array' is not assignable to type 'never'.
        typedArrays[4] = new Int32Array(obj);
        ~~~~~~~~~~~~~~
!!! error TS2322: Type 'Int32Array' is not assignable to type 'never'.
        typedArrays[5] = new Uint32Array(obj);
        ~~~~~~~~~~~~~~
!!! error TS2322: Type 'Uint32Array' is not assignable to type 'never'.
        typedArrays[6] = new Float32Array(obj);
        ~~~~~~~~~~~~~~
!!! error TS2322: Type 'Float32Array' is not assignable to type 'never'.
        typedArrays[7] = new Float64Array(obj);
        ~~~~~~~~~~~~~~
!!! error TS2322: Type 'Float64Array' is not assignable to type 'never'.
        typedArrays[8] = new Uint8ClampedArray(obj);
        ~~~~~~~~~~~~~~
!!! error TS2322: Type 'Uint8ClampedArray' is not assignable to type 'never'.
    
        return typedArrays;
    }
    
    function CreateIntegerTypedArraysFromArray2(obj:number[]) {
        var typedArrays = [];
        typedArrays[0] = Int8Array.from(obj);
        ~~~~~~~~~~~~~~
!!! error TS2322: Type 'Int8Array' is not assignable to type 'never'.
        typedArrays[1] = Uint8Array.from(obj);
        ~~~~~~~~~~~~~~
!!! error TS2322: Type 'Uint8Array' is not assignable to type 'never'.
        typedArrays[2] = Int16Array.from(obj);
        ~~~~~~~~~~~~~~
!!! error TS2322: Type 'Int16Array' is not assignable to type 'never'.
        typedArrays[3] = Uint16Array.from(obj);
        ~~~~~~~~~~~~~~
!!! error TS2322: Type 'Uint16Array' is not assignable to type 'never'.
        typedArrays[4] = Int32Array.from(obj);
        ~~~~~~~~~~~~~~
!!! error TS2322: Type 'Int32Array' is not assignable to type 'never'.
        typedArrays[5] = Uint32Array.from(obj);
        ~~~~~~~~~~~~~~
!!! error TS2322: Type 'Uint32Array' is not assignable to type 'never'.
        typedArrays[6] = Float32Array.from(obj);
        ~~~~~~~~~~~~~~
!!! error TS2322: Type 'Float32Array' is not assignable to type 'never'.
        typedArrays[7] = Float64Array.from(obj);
        ~~~~~~~~~~~~~~
!!! error TS2322: Type 'Float64Array' is not assignable to type 'never'.
        typedArrays[8] = Uint8ClampedArray.from(obj);
        ~~~~~~~~~~~~~~
!!! error TS2322: Type 'Uint8ClampedArray' is not assignable to type 'never'.
    
        return typedArrays;
    }
    
    function CreateIntegerTypedArraysFromArrayLike(obj:ArrayLike<number>) {
        var typedArrays = [];
        typedArrays[0] = Int8Array.from(obj);
        ~~~~~~~~~~~~~~
!!! error TS2322: Type 'Int8Array' is not assignable to type 'never'.
        typedArrays[1] = Uint8Array.from(obj);
        ~~~~~~~~~~~~~~
!!! error TS2322: Type 'Uint8Array' is not assignable to type 'never'.
        typedArrays[2] = Int16Array.from(obj);
        ~~~~~~~~~~~~~~
!!! error TS2322: Type 'Int16Array' is not assignable to type 'never'.
        typedArrays[3] = Uint16Array.from(obj);
        ~~~~~~~~~~~~~~
!!! error TS2322: Type 'Uint16Array' is not assignable to type 'never'.
        typedArrays[4] = Int32Array.from(obj);
        ~~~~~~~~~~~~~~
!!! error TS2322: Type 'Int32Array' is not assignable to type 'never'.
        typedArrays[5] = Uint32Array.from(obj);
        ~~~~~~~~~~~~~~
!!! error TS2322: Type 'Uint32Array' is not assignable to type 'never'.
        typedArrays[6] = Float32Array.from(obj);
        ~~~~~~~~~~~~~~
!!! error TS2322: Type 'Float32Array' is not assignable to type 'never'.
        typedArrays[7] = Float64Array.from(obj);
        ~~~~~~~~~~~~~~
!!! error TS2322: Type 'Float64Array' is not assignable to type 'never'.
        typedArrays[8] = Uint8ClampedArray.from(obj);
        ~~~~~~~~~~~~~~
!!! error TS2322: Type 'Uint8ClampedArray' is not assignable to type 'never'.
    
        return typedArrays;
    }
    
    function CreateTypedArraysOf(obj) {
        var typedArrays = [];
        typedArrays[0] = Int8Array.of(...obj);
        ~~~~~~~~~~~~~~
!!! error TS2322: Type 'Int8Array' is not assignable to type 'never'.
        typedArrays[1] = Uint8Array.of(...obj);
        ~~~~~~~~~~~~~~
!!! error TS2322: Type 'Uint8Array' is not assignable to type 'never'.
        typedArrays[2] = Int16Array.of(...obj);
        ~~~~~~~~~~~~~~
!!! error TS2322: Type 'Int16Array' is not assignable to type 'never'.
        typedArrays[3] = Uint16Array.of(...obj);
        ~~~~~~~~~~~~~~
!!! error TS2322: Type 'Uint16Array' is not assignable to type 'never'.
        typedArrays[4] = Int32Array.of(...obj);
        ~~~~~~~~~~~~~~
!!! error TS2322: Type 'Int32Array' is not assignable to type 'never'.
        typedArrays[5] = Uint32Array.of(...obj);
        ~~~~~~~~~~~~~~
!!! error TS2322: Type 'Uint32Array' is not assignable to type 'never'.
        typedArrays[6] = Float32Array.of(...obj);
        ~~~~~~~~~~~~~~
!!! error TS2322: Type 'Float32Array' is not assignable to type 'never'.
        typedArrays[7] = Float64Array.of(...obj);
        ~~~~~~~~~~~~~~
!!! error TS2322: Type 'Float64Array' is not assignable to type 'never'.
        typedArrays[8] = Uint8ClampedArray.of(...obj);
        ~~~~~~~~~~~~~~
!!! error TS2322: Type 'Uint8ClampedArray' is not assignable to type 'never'.
    
        return typedArrays;
    }
    
    function CreateTypedArraysOf2() {
        var typedArrays = [];
        typedArrays[0] = Int8Array.of(1,2,3,4);
        ~~~~~~~~~~~~~~
!!! error TS2322: Type 'Int8Array' is not assignable to type 'never'.
        typedArrays[1] = Uint8Array.of(1,2,3,4);
        ~~~~~~~~~~~~~~
!!! error TS2322: Type 'Uint8Array' is not assignable to type 'never'.
        typedArrays[2] = Int16Array.of(1,2,3,4);
        ~~~~~~~~~~~~~~
!!! error TS2322: Type 'Int16Array' is not assignable to type 'never'.
        typedArrays[3] = Uint16Array.of(1,2,3,4);
        ~~~~~~~~~~~~~~
!!! error TS2322: Type 'Uint16Array' is not assignable to type 'never'.
        typedArrays[4] = Int32Array.of(1,2,3,4);
        ~~~~~~~~~~~~~~
!!! error TS2322: Type 'Int32Array' is not assignable to type 'never'.
        typedArrays[5] = Uint32Array.of(1,2,3,4);
        ~~~~~~~~~~~~~~
!!! error TS2322: Type 'Uint32Array' is not assignable to type 'never'.
        typedArrays[6] = Float32Array.of(1,2,3,4);
        ~~~~~~~~~~~~~~
!!! error TS2322: Type 'Float32Array' is not assignable to type 'never'.
        typedArrays[7] = Float64Array.of(1,2,3,4);
        ~~~~~~~~~~~~~~
!!! error TS2322: Type 'Float64Array' is not assignable to type 'never'.
        typedArrays[8] = Uint8ClampedArray.of(1,2,3,4);
        ~~~~~~~~~~~~~~
!!! error TS2322: Type 'Uint8ClampedArray' is not assignable to type 'never'.
    
        return typedArrays;
    }
    
    function CreateTypedArraysFromMapFn2<T>(obj:ArrayLike<T>, mapFn: (n:T, v:number)=> number) {
        var typedArrays = [];
        typedArrays[0] = Int8Array.from(obj, mapFn);
        ~~~~~~~~~~~~~~
!!! error TS2322: Type 'Int8Array' is not assignable to type 'never'.
        typedArrays[1] = Uint8Array.from(obj, mapFn);
        ~~~~~~~~~~~~~~
!!! error TS2322: Type 'Uint8Array' is not assignable to type 'never'.
        typedArrays[2] = Int16Array.from(obj, mapFn);
        ~~~~~~~~~~~~~~
!!! error TS2322: Type 'Int16Array' is not assignable to type 'never'.
        typedArrays[3] = Uint16Array.from(obj, mapFn);
        ~~~~~~~~~~~~~~
!!! error TS2322: Type 'Uint16Array' is not assignable to type 'never'.
        typedArrays[4] = Int32Array.from(obj, mapFn);
        ~~~~~~~~~~~~~~
!!! error TS2322: Type 'Int32Array' is not assignable to type 'never'.
        typedArrays[5] = Uint32Array.from(obj, mapFn);
        ~~~~~~~~~~~~~~
!!! error TS2322: Type 'Uint32Array' is not assignable to type 'never'.
        typedArrays[6] = Float32Array.from(obj, mapFn);
        ~~~~~~~~~~~~~~
!!! error TS2322: Type 'Float32Array' is not assignable to type 'never'.
        typedArrays[7] = Float64Array.from(obj, mapFn);
        ~~~~~~~~~~~~~~
!!! error TS2322: Type 'Float64Array' is not assignable to type 'never'.
        typedArrays[8] = Uint8ClampedArray.from(obj, mapFn);
        ~~~~~~~~~~~~~~
!!! error TS2322: Type 'Uint8ClampedArray' is not assignable to type 'never'.
    
        return typedArrays;
    }
    
    function CreateTypedArraysFromMapFn(obj:ArrayLike<number>, mapFn: (n:number, v:number)=> number) {
        var typedArrays = [];
        typedArrays[0] = Int8Array.from(obj, mapFn);
        ~~~~~~~~~~~~~~
!!! error TS2322: Type 'Int8Array' is not assignable to type 'never'.
        typedArrays[1] = Uint8Array.from(obj, mapFn);
        ~~~~~~~~~~~~~~
!!! error TS2322: Type 'Uint8Array' is not assignable to type 'never'.
        typedArrays[2] = Int16Array.from(obj, mapFn);
        ~~~~~~~~~~~~~~
!!! error TS2322: Type 'Int16Array' is not assignable to type 'never'.
        typedArrays[3] = Uint16Array.from(obj, mapFn);
        ~~~~~~~~~~~~~~
!!! error TS2322: Type 'Uint16Array' is not assignable to type 'never'.
        typedArrays[4] = Int32Array.from(obj, mapFn);
        ~~~~~~~~~~~~~~
!!! error TS2322: Type 'Int32Array' is not assignable to type 'never'.
        typedArrays[5] = Uint32Array.from(obj, mapFn);
        ~~~~~~~~~~~~~~
!!! error TS2322: Type 'Uint32Array' is not assignable to type 'never'.
        typedArrays[6] = Float32Array.from(obj, mapFn);
        ~~~~~~~~~~~~~~
!!! error TS2322: Type 'Float32Array' is not assignable to type 'never'.
        typedArrays[7] = Float64Array.from(obj, mapFn);
        ~~~~~~~~~~~~~~
!!! error TS2322: Type 'Float64Array' is not assignable to type 'never'.
        typedArrays[8] = Uint8ClampedArray.from(obj, mapFn);
        ~~~~~~~~~~~~~~
!!! error TS2322: Type 'Uint8ClampedArray' is not assignable to type 'never'.
    
        return typedArrays;
    }
    
    function CreateTypedArraysFromThisObj(obj:ArrayLike<number>, mapFn: (n:number, v:number)=> number, thisArg: {}) {
        var typedArrays = [];
        typedArrays[0] = Int8Array.from(obj, mapFn, thisArg);
        ~~~~~~~~~~~~~~
!!! error TS2322: Type 'Int8Array' is not assignable to type 'never'.
        typedArrays[1] = Uint8Array.from(obj, mapFn, thisArg);
        ~~~~~~~~~~~~~~
!!! error TS2322: Type 'Uint8Array' is not assignable to type 'never'.
        typedArrays[2] = Int16Array.from(obj, mapFn, thisArg);
        ~~~~~~~~~~~~~~
!!! error TS2322: Type 'Int16Array' is not assignable to type 'never'.
        typedArrays[3] = Uint16Array.from(obj, mapFn, thisArg);
        ~~~~~~~~~~~~~~
!!! error TS2322: Type 'Uint16Array' is not assignable to type 'never'.
        typedArrays[4] = Int32Array.from(obj, mapFn, thisArg);
        ~~~~~~~~~~~~~~
!!! error TS2322: Type 'Int32Array' is not assignable to type 'never'.
        typedArrays[5] = Uint32Array.from(obj, mapFn, thisArg);
        ~~~~~~~~~~~~~~
!!! error TS2322: Type 'Uint32Array' is not assignable to type 'never'.
        typedArrays[6] = Float32Array.from(obj, mapFn, thisArg);
        ~~~~~~~~~~~~~~
!!! error TS2322: Type 'Float32Array' is not assignable to type 'never'.
        typedArrays[7] = Float64Array.from(obj, mapFn, thisArg);
        ~~~~~~~~~~~~~~
!!! error TS2322: Type 'Float64Array' is not assignable to type 'never'.
        typedArrays[8] = Uint8ClampedArray.from(obj, mapFn, thisArg);
        ~~~~~~~~~~~~~~
!!! error TS2322: Type 'Uint8ClampedArray' is not assignable to type 'never'.
    
        return typedArrays;
    }
    
    function CreateTypedArraysFromThisObj2<T>(obj:ArrayLike<T>, mapFn: (n:T, v:number)=> number, thisArg: {}) {
        var typedArrays = [];
        typedArrays[0] = Int8Array.from(obj, mapFn, thisArg);
        ~~~~~~~~~~~~~~
!!! error TS2322: Type 'Int8Array' is not assignable to type 'never'.
        typedArrays[1] = Uint8Array.from(obj, mapFn, thisArg);
        ~~~~~~~~~~~~~~
!!! error TS2322: Type 'Uint8Array' is not assignable to type 'never'.
        typedArrays[2] = Int16Array.from(obj, mapFn, thisArg);
        ~~~~~~~~~~~~~~
!!! error TS2322: Type 'Int16Array' is not assignable to type 'never'.
        typedArrays[3] = Uint16Array.from(obj, mapFn, thisArg);
        ~~~~~~~~~~~~~~
!!! error TS2322: Type 'Uint16Array' is not assignable to type 'never'.
        typedArrays[4] = Int32Array.from(obj, mapFn, thisArg);
        ~~~~~~~~~~~~~~
!!! error TS2322: Type 'Int32Array' is not assignable to type 'never'.
        typedArrays[5] = Uint32Array.from(obj, mapFn, thisArg);
        ~~~~~~~~~~~~~~
!!! error TS2322: Type 'Uint32Array' is not assignable to type 'never'.
        typedArrays[6] = Float32Array.from(obj, mapFn, thisArg);
        ~~~~~~~~~~~~~~
!!! error TS2322: Type 'Float32Array' is not assignable to type 'never'.
        typedArrays[7] = Float64Array.from(obj, mapFn, thisArg);
        ~~~~~~~~~~~~~~
!!! error TS2322: Type 'Float64Array' is not assignable to type 'never'.
        typedArrays[8] = Uint8ClampedArray.from(obj, mapFn, thisArg);
        ~~~~~~~~~~~~~~
!!! error TS2322: Type 'Uint8ClampedArray' is not assignable to type 'never'.
    
        return typedArrays;
    }